updated fonts and styling for navbar, added Admin Demo login

--- a/PPETracker/Views/Products/Dashboard.cshtml
+++ b/PPETracker/Views/Products/Dashboard.cshtml
@@ -12,7 +12,7 @@
         float: left !important;
     }
 </style>
-<h1 class="text-center">Dashboard</h1>
+<h1 class="text-center">PPE Tracker</h1>
 
 <div class="container">
     @if (ViewBag.IsUserAdmin == true)
