--- a/PPETracker/Views/Products/_ProductDetails.cshtml
+++ b/PPETracker/Views/Products/_ProductDetails.cshtml
@@ -3,7 +3,7 @@
 <div class="modal fade" id="prodDetailsModal" tabindex="-1" role="dialog" aria-labelledby="prodDetailsModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header modal-header-color">
                 <h3 class="modal-title" id="prodDetailsModalLabel">Product Details</h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
