--- a/PPETracker/Views/Shared/_Layout.cshtml
+++ b/PPETracker/Views/Shared/_Layout.cshtml
@@ -21,8 +21,17 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link nav-text-white" asp-area="" asp-controller="Products" asp-action="Dashboard">Home</a>
+                            <a class="nav-link nav-text-white" asp-area="" asp-controller="Products" asp-action="Dashboard">Products</a>
                         </li>
+                        @if (User.Identity.IsAuthenticated == true)
+                        {
+                            @if (User.Claims.FirstOrDefault(x => x.Type == "IsAdmin").Value == "Y")
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link nav-text-white" asp-area="" asp-controller="Shipments" asp-action="Dashboard">Shipments</a>
+                                </li>
+                            }
+                        }
                         <li class="nav-item">
                             <a class="nav-link nav-text-white" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
